@@ -105,12 +105,25 @@ lilypond</a>,
 </tr>
 
 
+<tr>
+  <td>
+    Debian
+    </td>
+  <td>
+  Sid
+  </td>
+  <td>
+<b>apt-get install lilypond lilypond-doc</b>
+  </td>
+  <td>ask apt-get</td>
+  <td>Anthony Fok</td>
+</tr>
+
 
 <tr>
-
   <td>
-  Debian/i386 
-  </td>
+    Debian/i386 
+    </td>
   <td>
   Woody
   </td>
